Bugfix: Scrolling on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,7 +24,7 @@ body {
 @media (max-width: 768px) {
   #cursor {
     display: none;
-    overflow: auto;
+    overflow: visible;
   }
 }
 
@@ -136,7 +136,6 @@ main {
   transition: background-color 0.3s ease;
   mix-blend-mode: difference;
 }
-
 
 .home-button:hover {
   background-color: #404040;
